<?xml version="1.0" encoding="utf-8"?>
<resources>

     <string name="url">http://192.168.0.109/SP/Main%20Program/</string> 
    <!--  <string name="url">http://192.168.1.102</string> -->

    <!-- General Purpose Strings -->
    <string name="app_name">If it Fits, I Sits</string>
    <string name="action_settings">Settings</string>
    <string name="desc">Content Description</string>
    <string name="measure">Measure</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="use_this">Use this</string>
    <string name="use_other">Use the other</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Strings for Login -->

    <string name="hint_authkey">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>

    <string name="addproject">Add Project</string>
    
    
    <!-- Strings for Navigation Drawer and Action Bar -->

    <string-array name="drawer_options">
        <item>Home</item>
        <item>Gather Data</item>
        <item>Manage Database</item>
        <item>Help</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <string name="status_internet">Internet</string>
    <string name="status_gps">GPS</string>

    <!-- Strings for Input Fragment -->

    <string name="hint_height">Height (cm)</string>
    <string name="hint_weight">Weight (kg)</string>
    <string name="hint_age">Age</string>
    <string name="button_create">Proceed</string>
    <string name="button_view">View All Records</string>
    <string name="textview_header">Create Record</string>
    <string name="spinner_prompt">Sex</string>
    <string name="region_prompt">Region</string>
    <string name="cityprov_prompt">City/Municipality, Province</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="upload">Sync All</string>
    <string name="delete">Delete All</string>

    <!-- Strings for ViewRecordsFragment -->

    <string name="confirm_delete_msg">Are you sure you want to delete all data?</string>
    <string name="confirm_delete_title">Confirm Deletion</string>

    <!-- Strings for ViewRecordFragment -->

    <string name="action_viewall">View All</string>
    <string name="action_viewqueue">View Queue</string>
    <string name="textview_basicInfo">BASIC INFORMATION</string>
    <string name="textview_anthropometricData">ANTHROPOMETRIC DATA</string>
    <string name="textview_height">Height</string>
    <string name="textview_weight">Weight</string>
    <string name="textview_age">Age</string>
    <string name="textview_sex">Sex</string>
    <string name="textview_sitH">Sitting Height</string>
    <string name="textview_sH">Shoulder Height</string>
    <string name="textview_erH">Elbow Rest Height</string>
    <string name="textview_tC">Thigh Clearance</string>
    <string name="textview_pH">Popliteal Height</string>
    <string name="textview_kH">Knee Height</string>
    <string name="textview_bpL">Buttock-Knee Length</string>
    <string name="textview_hB">Hip Breadth</string>
    <string name="textview_kkB">Knee-to-knee Breadth</string>
    <string name="textview_otherInfo">OTHER INFORMATION</string>
    <string name="textview_recorded">Recorded At</string>
    <string name="title_activity_create_record">Create Record</string>
    <string name="textview_created">Record successfully created!</string>
    <string name="title_activity_view_record_fragment">ViewRecordFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_insert">ViewInsert</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_capture_activity2">CaptureActivity2</string>
    <string name="title_activity_display_process">DisplayProcessActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_project">ProjectActivity</string>
    
    <!-- Strings for Help Fragment -->
    <string name="overview_header"> I. Overview </string>
    <string name="overview_text"> If It Fits, I Sits is a mobile application that allows its users to gather anthropometric data for armchair design. It uses digital images captured by the mobile device\'s camera to derive body measurements. Gathered data can be synced to the National Anthropometric Database if a network connection is available. </string>

    <string name="subject_header"> II. Subject Preparation </string>
    <string name="subject_text"> To be able to reap the full benefits of this application, a certain protocol for preparing subjects must be followed. The application needs three(3) digital images that follow certain criteria. </string>
    
     <string name="subject_a_header"> Background </string>
     <string name="subject_a"> A green screen must be used as the background for all images. For good results, the screen must be well lit. </string>

	<string name="subject_b_header"> Reference Object </string>
    <string name="subject_b"> The reference object serves as a the basis for deriving the ratio of real world measurements and pixels. A valid reference object must be of any color except green and preferably a square. By default, the reference object must measure 20x20cm.</string>
    
    <string name="subject_c_header">Subject</string>
    <string name="subject_c">The subject must not wear clothes with a green hue. The subject must wear a bonnet/swimming cap to remove the irregularites caused by hair (when necessary). The subject (as much as possible) must wear tight fitting clothes.</string>
    
    <string name="subject_d_header">Positioning</string>
    <string name="subject_d">Three images with the subject and the reference object properly positioned are needed: \n
  
    Side: The subject must sit straight, with hands on the shoulder, with the knees on a 90 degree flexion angle, and face towards the right with respect to the camera frame. To suit different kinds of subjects, use an adjustable chair covered with green fabric.  Cover the left thigh of the subject with green material. The reference object must be aligned to the surface of the subject closest to the camera. (Fig. A) \n
   
    Back: The subject must sit straight, with the elbows on the side (emulation of using an armchair), and face towards the wall. Just like the first setup, the reference object must be also aligned to the surface of the subject closest to the camera. (Fig. B) \n
   
    Front: The subject must stand straight, with hands on the shoulder, and with both feet touching. The reference object must be aligned with the surface of the subject’s knees. (Fig. C) \n  
	</string> 
	
    <string name="usage_header"> III. Application Usage </string>
    <string name="usage_text">
    Gather Data: To start gathering anthropometric data, select "Gather Data" from the navigation drawer. Follow the prompts given by the application on what configuration is needed for each capture. After three captures, fill in the necessary details, then click proceed to continue. After gathering data, if a connection to the server can be established, the data is automatically sent to the national anthropometric database.\n
    Manage Database: All gathered data will be stored in the local database. Here, you are given the option to sync to the server unsent data.
    </string>
    
    <!-- Strings for About Fragment -->
    <string name="version">Version 1.2</string>
    <string name="copyright">Copyright 2014</string>
    <string name="author">Ivan Marc H. Escamos</string>
    <string name="ics">Institute of Computer Science</string>
    <string name="uplb">UPLB</string>
    
    <!-- Strings for Project Dialog -->
    
    <string name="startproject">Start a Project</string>
    <string name="hint_projectId">Enter Project ID</string>
    
</resources>
