<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
 
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10sp">
    
        <TextView android:id="@+id/overview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="@string/overview_header">
        </TextView>
        
        <TextView android:id="@+id/overview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/overview_text">
        </TextView>
        
        <TextView android:id="@+id/subject_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="@string/subject_header">
        </TextView>
        
        <TextView android:id="@+id/subject_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/subject_text">
        </TextView>
        
        <ImageView
            android:id="@+id/protocol_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            android:src="@drawable/protocol_compiled_letters" 
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp">
            
        </ImageView>
        
        <TextView android:id="@+id/subject_a_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/subject_a_header">
        </TextView>
        
        <TextView android:id="@+id/subject_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/subject_a">
        </TextView>
        
         <TextView android:id="@+id/subject_b_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/subject_b_header">
        </TextView>
        
        <TextView android:id="@+id/subject_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/subject_b">
        </TextView>
        
         <TextView android:id="@+id/subject_c_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/subject_c_header">
        </TextView>
        
        <TextView android:id="@+id/subject_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/subject_c">
        </TextView>
        
        <TextView android:id="@+id/subject_d_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/subject_d_header">
        </TextView>
        
        <TextView android:id="@+id/subject_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/subject_d">
        </TextView>
        
        <TextView android:id="@+id/usage_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="@string/usage_header">
        </TextView>
        
        <TextView android:id="@+id/usage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/usage_text">
        </TextView>
    </LinearLayout>
 
</ScrollView>