<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@color/emerald" 
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity"
    android:background="@color/emerald" 
    android:orientation="vertical"
    android:layout_centerInParent="true">
    
    <ImageView android:id="@+id/login_graphic"
        android:src="@drawable/login_graphic_small"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/desc"/>
    
    <TextView android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name">
  	</TextView>
    <TextView android:id="@+id/about2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/version"
        android:layout_gravity="center_horizontal">    
        
    </TextView>
    
    <TextView android:id="@+id/about3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/copyright"
        android:layout_gravity="center_horizontal">     
        
    </TextView>
    
    <TextView android:id="@+id/about4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/author"
        android:layout_gravity="center_horizontal">     
        
    </TextView>
    <TextView android:id="@+id/about5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/ics"
        android:layout_gravity="center_horizontal"> 
    </TextView> 
    <TextView android:id="@+id/about6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/uplb"
        android:layout_gravity="center_horizontal">     
        
    </TextView>
   
   

</LinearLayout>
</RelativeLayout>
