<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    tools:context=".DisplayActivity"
	    android:orientation="vertical" >
	
	    <ImageView
	        android:id="@+id/display"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="24dp"
	        android:layout_marginBottom="24dp"
	        android:contentDescription="@string/hello_world" />
	    
	    <ImageView
	        android:id="@+id/display2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="24dp"
	        android:layout_marginBottom="24dp"
	        android:contentDescription="@string/hello_world" />
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/ab_bottom_solid_dark_holo"
	        android:orientation="horizontal"
	        android:padding="2dp"
	        android:weightSum="2" >
	
	        <Button
	            android:id="@+id/cancel"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_margin="2dp"
	            android:layout_weight="1"
	            android:onClick="cancel"
	            android:text="@string/cancel" />
	
	        <Button
	            android:id="@+id/proceed"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_margin="2dp"
	            android:layout_weight="1"
	            android:onClick="proceed"
	            android:text="@string/proceed" />
	    </LinearLayout>
	
	</LinearLayout>

</ScrollView>
